--- a/app/public/home.html
+++ b/app/public/home.html
@@ -15,7 +15,7 @@
                 <section class='center-align'>
                     <h1><i class="medium material-icons">person_pin</i>Friend Finder</h1>
                     <h4>Answer a few questions...Meet your match!</h4>
-                    <a href='survey.html' class="waves-effect waves-light btn cyan lighten-1"><i class="material-icons left">comment</i>Take Survey</a>
+                    <a href='/survey' class="waves-effect waves-light btn cyan lighten-1"><i class="material-icons left">comment</i>Take Survey</a>
                 </section>
             </div>
             <div class='col s4'>
